--- a/styles/index.css
+++ b/styles/index.css
@@ -4,14 +4,12 @@
 }
 header{
   background-image: url('../images/banner/banner3.png');
-  height:808px;
-  /* width: 1500px; */
-  display: flex;
-  align-items: center;
-  justify-content:space-around;  
+  background-size: 100% 100%;
+  background-repeat: no-repeat;
 }
 .header-side{
   text-align: right;
+  padding: 150px;
 }
 .header-title{
   color: white;
@@ -40,8 +38,11 @@ header{
 .failure-title{
   font-size: 40px;
 }
-.failure-details,.check{
+.failure-details{
   font-size: 16px;
+  color:rgb(144, 136, 136)
+}
+.check{
   color:rgb(144, 136, 136)
 }
 .plans-title{
@@ -61,13 +62,16 @@ header{
 
 }
 .watch{
-  display: flex;
-  justify-content: center;
-  margin-top: 100px;
-  margin: 0 auto;
-  background: url('../images/watch.png');
-  width: 75%;
-  margin-bottom: 100px;
+  /* display: flex; */
+  /* justify-content: center; */
+  /* margin-top: 100px; */
+  /* margin: 0 auto; */
+  background-image: url('../images/gradient1.png'),url('../images/watch.png');
+  margin: 50px auto;
+  width: 100%;
+  background-size: contain ;
+  /* width: 75%; */
+  /* margin-bottom: 100px; */
   background-repeat: no-repeat;
 }
 .watch>h2, .watch>button{
@@ -75,6 +79,7 @@ header{
 }
 .watch-text{
   color:white;
+  text-align: left;
 }
 footer{
   background: black;
